src/objects/cfg_HS_User_Batch_Creation_Error__c.object
<CustomObject>
    <fields>
        <fullName>cfg_Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Process_Attempted__c</fullName>
        <label>Process Attempted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HS User Batch Creation Errors</relationshipLabel>
        <relationshipName>HS_User_Batch_Creation_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HS_User_Batch_Creation_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HS User Batch Creation Error</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>HS User Batch Creation Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HS User Batch Creation Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>